--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,7 @@ header {
     border-radius: 4px;
     margin-top: 30px;
     padding: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .blue-background {
     background: var(--object-color) ;
@@ -394,7 +395,6 @@ footer {
     border: 0px;
     border-radius: 4px;
     padding: 6px 22px;
-    /* outline-style: none ; */
     transition-duration: 250ms;
     transition-property: color, background-color, box-shadow;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -617,10 +617,11 @@ footer {
     background-color:rgba(255, 255, 255, 0.1);
 }
 
+
+
 .ftr-maling {
-    display: block;
+    width: 570px;
     margin-left: auto;
-    
 }
 
 .ftr-maling-title {
@@ -632,32 +633,8 @@ footer {
     margin-bottom: 20px;
 }
 
-.ftr-maling-forms {
-    display: flex;
-    padding-left: 0px;
-}
-
-.ftr-maling-list {
-    width: 358px;
-    height: 50px;
-}
-
-
-.ftr-form-email {
-    /*display: block;*/
-    
-}
-
-.ftr-label-email {
-    
-}
-
-.ftr-button-li {
-    /*display: flex;*/
-}
-
 .ftr-input-email {
-    width: 100%; 
+    width: 358px; 
     font-size: 16px;
     line-height: 1.25;
     color: rgba(255, 255, 255, 0.6);
@@ -670,8 +647,6 @@ footer {
     padding-left: 16px;
 }
 
-
-
 .ftr-button-send {
     cursor: pointer;
     color: var(--white-color) ;
@@ -683,13 +658,15 @@ footer {
     width: 200px;
     border: none;
     border-radius: 4px;
-    margin-left: 12px;
-       
+    margin-left: 8px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
 .ftr-btn-send {
     display: inline-flex;
     align-items: center;
 }
+
 .ftr-button-txt {
     margin-right: 10px;
 }
@@ -698,7 +675,6 @@ footer {
     width: 24px;
     height: 24px;
     fill: var(--brand-color);
-     
 }
 
 
@@ -709,14 +685,16 @@ footer {
     transform: translate(-50%, -50%);
     width: 100%;
     max-width: 528px;
-    min-height: 580px;
-    padding: 40px 30px;
+    min-height: 581px;
+    padding: 40px 40px;
     background-color: #fff;
     box-shadow:  0px 1px 3px rgba(0, 0, 0, 0.12),
                  0px 1px 1px rgba(0, 0, 0, 0.14),
                  0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
   }
+
+  
 
 .backdrop {
     position: fixed;
@@ -736,20 +714,123 @@ footer {
     pointer-events: none;
   }
 
-    
   .modal-btn-close {
     cursor: pointer;
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 8px;
+    right: 8px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: #FFFFFF;
     width: 30px;
     height: 30px;
   }
+.modal-title {
+    margin-bottom: 12px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+.modal-forms {
+    /*display: flex;
+    flex-direction: column;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
+    /*margin-right: auto;
+    margin-left: auto;*/
+    
+}
+.modal-1 {
+    
+    margin-left: auto;
+    max-width: 528px;
+    min-height: 581px;
+    padding: 40px 40px;
+    background-color: rgb(236, 165, 165);
+    box-shadow:  0px 1px 3px rgba(0, 0, 0, 0.12),
+                 0px 1px 1px rgba(0, 0, 0, 0.14),
+                 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+  }
+.modal-form-field {
+ 
+}
+.form-label {
+    /*display: block;*/
+    
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--grey-color);
 
+}
 
+.form-input {
+    /*display: block;*/
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.form-comment {
+    /*display: block;*/
+    width: 100%;
+    height: 120px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    padding: 12px 16px;
+}
+
+.form-button {
+    display: block;
+   margin-right: auto;
+   margin-left: auto;
+  
+    cursor: pointer;
+    color: var(--white-color) ;
+    font-weight: 700;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    height: 50px;
+    width: 200px;
+    border: none;
+    border-radius: 4px;
+    box-shadow:  0px 1px 3px rgba(0, 0, 0, 0.12),
+                 0px 1px 1px rgba(0, 0, 0, 0.14), 
+                 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+}
+.user-accept {
+    margin-bottom: 30px;
+}
+.checkbox-label {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--grey-color);
+
+}
+
+.checkbox-link {
+     font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    text-decoration: underline;
+    color: var(--object-color);
+}
 
 
 
@@ -834,6 +915,6 @@ footer {
   resize: none;
   width: 100%;
   height: 75px;
-}
+}*/
   
-  */
+  
