--- a/css/styles.css
+++ b/css/styles.css
@@ -678,21 +678,6 @@ footer {
 }
 
 
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: 528px;
-    min-height: 581px;
-    padding: 40px 40px;
-    background-color: #fff;
-    box-shadow:  0px 1px 3px rgba(0, 0, 0, 0.12),
-                 0px 1px 1px rgba(0, 0, 0, 0.14),
-                 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-  }
 
   
 
@@ -734,30 +719,42 @@ footer {
     letter-spacing: 0.03em;
     color: #212121;
 }
-.modal-forms {
-    /*display: flex;
-    flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
-    /*margin-right: auto;
-    margin-left: auto;*/
-    
-}
-.modal-1 {
-    
-    margin-left: auto;
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
     max-width: 528px;
     min-height: 581px;
     padding: 40px 40px;
-    background-color: rgb(236, 165, 165);
+    background-color: #fff;
     box-shadow:  0px 1px 3px rgba(0, 0, 0, 0.12),
                  0px 1px 1px rgba(0, 0, 0, 0.14),
                  0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
   }
+
+
+.modal-forms {
+   
+    
+}
 .modal-form-field {
+ position: relative;
  
 }
+
+.modal-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    width: 12px;
+    height: 12px;
+    fill: rgba(33, 33, 33, 1);
+        
+}
+
 .form-label {
     /*display: block;*/
     
@@ -771,12 +768,31 @@ footer {
 
 .form-input {
     /*display: block;*/
+    cursor: pointer;
     width: 100%;
     height: 40px;
     margin-bottom: 10px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
+    border: 1px solid rgba(33, 33, 33, 0.2); 
     border-radius: 4px;
+    padding-left: 42px;
 }
+.form-input:focus +.modal-form-icon{ 
+    fill: var(--object-color);
+    transition-duration: 250ms;
+    transition-property:  fill; 
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+    
+}
+
+
+.form-input:focus {
+    outline: none; 
+    border: 1px solid var(--object-color);
+    transition-duration: 250ms;
+    transition-property:  border; 
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+
 
 .form-comment {
     /*display: block;*/
@@ -794,9 +810,8 @@ footer {
 
 .form-button {
     display: block;
-   margin-right: auto;
-   margin-left: auto;
-  
+    margin-right: auto;
+    margin-left: auto;
     cursor: pointer;
     color: var(--white-color) ;
     font-weight: 700;
@@ -812,20 +827,54 @@ footer {
                  0px 2px 1px rgba(0, 0, 0, 0.2);
 
 }
-.user-accept {
+.form-user-accept {
+    position: relative;
+   
     margin-bottom: 30px;
 }
-.checkbox-label {
-    font-weight: normal;
+
+.form-check-label {
+    display: flex;
+    align-items: center;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--grey-color);
-
 }
 
-.checkbox-link {
-     font-size: 14px;
+.checkbox-input {
+    -webkit-appearance: none ;
+    -moz-appearance: none ;
+    appearance: none;
+    
+}
+
+
+.form-icon-check {
+    
+    position: absolute;
+    width: 16px;
+    height: 15px;
+    background-color: var(--brand-color);
+    border: 2px solid rgba(33, 33, 33, 1);
+    border-radius: 4px;
+    
+    padding-left: 14px;
+    margin-right: 10px;
+}
+.checkbox-input:checked +.form-icon-check {
+    border-color: transparent;
+    background-size: contain;
+    background-origin: border-box; 
+    background-image: url(/img/icons/icon-check.svg);
+   
+  
+}
+
+
+
+.form-check-link {
+    font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-decoration: underline;
@@ -833,8 +882,7 @@ footer {
 }
 
 
-
-  /* Код Юли
+   /* Код Юли */
   .contact-form {
   display: flex;
   flex-wrap: wrap;
@@ -915,6 +963,6 @@ footer {
   resize: none;
   width: 100%;
   height: 75px;
-}*/
+}
   
   
