--- a/css/styles.css
+++ b/css/styles.css
@@ -654,9 +654,17 @@ footer {
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 16px;
+
 }
 
+.ftr-input-email:focus {
+    transition-property: outline;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+} 
+
 .ftr-button-send {
+    
     cursor: pointer;
     color: var(--white-color) ;
     font-weight: 700;
@@ -676,13 +684,12 @@ footer {
     align-items: center;
 }
 
-.ftr-button-txt {
-    margin-right: 10px;
-}
+
 
 .ftr-icons-send {
     width: 24px;
     height: 24px;
+    margin-left: 10px;
     fill: var(--brand-color);
 }
 
@@ -764,9 +771,9 @@ footer {
     border-radius: 4px;
   }
 
-
 .modal-form-field {
  position: relative;
+ margin-bottom: 10px;
  }
 
 .modal-form-icon {
@@ -776,26 +783,21 @@ footer {
     width: 12px;
     height: 12px;
     fill: rgba(33, 33, 33, 1);
-        
 }
 
 .form-label {
-    /*display: block;*/
-    
+    display: block;
     margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: var(--grey-color);
-
 }
 
 .form-input {
-    /*display: block;*/
     cursor: pointer;
     width: 100%;
     height: 40px;
-    margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2); 
     border-radius: 4px;
     padding-left: 42px;
@@ -817,7 +819,6 @@ footer {
 }
 
 .form-comment {
-    /*display: block;*/
     width: 100%;
     height: 120px;
     margin-bottom: 20px;
@@ -836,9 +837,8 @@ footer {
     border: 1px solid var(--object-color);
     transition-duration: 250ms;
     transition-property:  border; 
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .form-button {
     display: block;
@@ -872,6 +872,7 @@ footer {
     letter-spacing: 0.03em;
     color: var(--grey-color);
     padding-left: 37px;
+    cursor: pointer;
 }
 
 .checkbox-input {
@@ -895,6 +896,9 @@ footer {
     background-size: contain;
     background-origin: border-box; 
     background-image: url(/img/icons/icon-check.svg);
+    transition-duration: 250ms;
+    transition-property: border; 
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
